--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="container mx-auto px-6 py-12 lg:py-24">
                 <div class="max-w-4xl mx-auto">
                     <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold text-white leading-tight fade-in-up">
-                        Especialistas en <span class="text-inovixe-blue">Inteligencia Artificial</span> para Transformar tu Negocio
+                        Transformamos tu empresa con <span class="text-inovixe-blue">Inteligencia Artificial</span> para mejores resultados
                     </h1>
                     <p class="mt-6 text-lg sm:text-xl text-gray-400 max-w-2xl mx-auto fade-in-up" style="transition-delay: 0.2s;">
                         Somos una agencia de IA que ofrece soluciones avanzadas, con servicios de marketing digital disponibles por separado o integrados para maximizar resultados.
@@ -274,24 +274,24 @@
    <!-- Sección Desafíos a Oportunidades -->
 <section class="py-16 md:py-24 bg-black-transparent">
     <div class="container mx-auto px-6 text-center">
-        <h2 class="section-title text-center mb-12 fade-in-up">De Desafíos a Oportunidades con IA</h2>
+        <h2 class="section-title text-center mb-12 fade-in-up">De desafíos a oportunidades con IA</h2>
         <p class="text-gray-400 text-lg max-w-3xl mx-auto mb-10 fade-in-up" style="transition-delay: 0.1s;">
             ¿Te enfrentas a techos de crecimiento o a la imposibilidad de estar disponible 24/7? En Inóvixe, integramos IA con estrategias de marketing para transformar estos retos en oportunidades de escalabilidad ilimitada y eficiencia operativa.
         </p>
         <div class="flex flex-col md:flex-row justify-center items-center gap-8 md:gap-16">
             <div class="text-center fade-in-up" style="transition-delay: 0.2s;">
                 <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                <h4 class="font-bold text-xl">Problema: Techo de Crecimiento</h4>
+                <h4 class="font-bold text-xl">Problema: Techo de crecimiento</h4>
                 <p class="text-gray-400 mt-2">Dependencia excesiva de recursos humanos y limitaciones en procesos manuales que restringen la expansión.</p>
             </div>
             <div class="text-center fade-in-up" style="transition-delay: 0.4s;">
                 <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.25 18L9 11.25l4.306 4.307a11.95 11.95 0 015.814-5.519l2.74-1.22m0 0l-5.94-2.28m5.94 2.28l-2.28 5.941"></path></svg>
-                <h4 class="font-bold text-xl">Solución: Escala Ilimitada con IA</h4>
+                <h4 class="font-bold text-xl">Solución: Escala ilimitada con IA</h4>
                 <p class="text-gray-400 mt-2">Herramientas de IA y asistentes virtuales que automatizan procesos y potencian estrategias de marketing para un crecimiento sin barreras.</p>
             </div>
             <div class="text-center fade-in-up" style="transition-delay: 0.6s;">
                 <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                <h4 class="font-bold text-xl">Resultado: Presencia Constante</h4>
+                <h4 class="font-bold text-xl">Resultado: Presencia constante</h4>
                 <p class="text-gray-400 mt-2">Estrategias impulsadas por IA y marketing que aseguran una presencia continua, abriendo posibilidades para aumentar ventas de manera orgánica y eficiente.</p>
             </div>
         </div>
@@ -380,7 +380,7 @@
         <!-- CTA Final -->
         <section class="py-16 md:py-24 bg-inovixe-blue text-white text-center">
             <div class="container mx-auto px-6 fade-in-up">
-                <h2 class="text-4xl sm:text-5xl font-extrabold mb-4">¿Listo para Escalar tu Negocio?</h2>
+                <h2 class="text-4xl sm:text-5xl font-extrabold mb-4">¿Listo para escalar tu negocio?</h2>
                 <p class="text-lg mb-8 max-w-2xl mx-auto">
                     Transforma tu empresa con las soluciones de IA y marketing más avanzadas del mercado.
                 </p>
