--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.1s;">
                         <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.25 12.76c0 1.6 1.123 2.994 2.707 3.227 1.068.157 2.148.279 3.238.364.466.037 .893 .281 1.153.671L12 21l4.108-3.978c.26-.39.687-.634 1.153-.671 1.09-.085 2.17-.207 3.238-.364 1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z"></path></svg>
                         <h3 class="font-bold text-xl mb-2">Agentes de IA para WhatsApp, Redes Sociales, Web y Llamadas</h3>
-                        <p class="text-gray-400 text-center">Implementamos agentes autónomos de IA para ofrecer atención al cliente 24/7 y gestion multicanal, optimizando consultas e impulsando las ventas directas</p>
+                        <p class="text-gray-400 text-center">Implementamos agentes autónomos de IA para ofrecer atención al cliente 24/7 y gestion multicanal, optimizando consultas e impulsando las ventas directas.</p>
                     </div>
                     <!-- Servicio 3 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.2s;">
