--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <p class="text-gray-400 mb-6">
                         Nuestro equipo de expertos en IA y marketing te ayuda a integrar estas tecnologías de manera flexible: elige solo IA, solo marketing, o una combinación poderosa de ambas para impulsar tu negocio.
                     </p>
-                    <img src="https://placehold.co/600x400/2b6cb0/ffffff?text=Equipo+Inóvixe" alt="Foto del equipo Inóvixe" class="rounded-xl shadow-2xl mt-8 mb-6 mx-auto border border-inovixe-blue">
+                    <img src="logo.webp" alt="Foto del equipo Inóvixe" class="rounded-xl shadow-2xl mt-8 mb-6 mx-auto border border-inovixe-blue">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
                     </div>
                 </div>
