--- a/index.html
+++ b/index.html
@@ -150,31 +150,31 @@
     <!-- Fondo de partículas -->
     <div id="particles-js"></div>
 
-    <!-- Header y Navegación -->
-    <header class="bg-black bg-opacity-80 backdrop-blur-sm fixed top-0 left-0 w-full z-50 transition-all duration-300">
-        <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <div class="flex items-center">
-                <a href="#inicio" class="flex items-center">
-                    <img src="Inovixe.jpg" alt="Logo de Inóvixe" class="h-10 w-auto">
-                </a>
-            </div>
-            <div class="hidden lg:flex items-center space-x-8">
-                <a href="#inicio" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Inicio</a>
-                <a href="#servicios" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Servicios</a>
-                <a href="#sobre-nosotros" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Sobre Nosotros</a>
-                <a href="#testimonios" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Testimonios</a>
-                <a href="#faq" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">FAQ</a>
-                <a href="#contacto" class="btn-cta bg-inovixe-blue text-white hover:bg-inovixe-blue/90 transition-colors">Consulta Gratuita</a>
-            </div>
-            <div class="lg:hidden">
-                <button id="hamburger-btn" class="hamburger-icon">
-                    <div class="line-1"></div>
-                    <div class="line-2"></div>
-                    <div class="line-3"></div>
-                </button>
-            </div>
-        </nav>
-    </header>
+<!-- Header y Navegación -->
+<header class="bg-black bg-opacity-80 backdrop-blur-sm fixed top-0 left-0 w-full z-50 transition-all duration-300">
+    <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
+        <div class="flex items-center">
+            <a href="#inicio" class="flex items-center">
+                <span class="text-3xl font-extrabold text-white">Inóvi<span class="text-inovixe-blue">x</span>e</span>
+            </a>
+        </div>
+        <div class="hidden lg:flex items-center space-x-8">
+            <a href="#inicio" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Inicio</a>
+            <a href="#servicios" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Servicios</a>
+            <a href="#sobre-nosotros" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Sobre Nosotros</a>
+            <a href="#testimonios" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Testimonios</a>
+            <a href="#faq" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">FAQ</a>
+            <a href="#contacto" class="btn-cta bg-inovixe-blue text-white hover:bg-inovixe-blue/90 transition-colors">Consulta Gratuita</a>
+        </div>
+        <div class="lg:hidden">
+            <button id="hamburger-btn" class="hamburger-icon">
+                <div class="line-1"></div>
+                <div class="line-2"></div>
+                <div class="line-3"></div>
+            </button>
+        </div>
+    </nav>
+</header>
 
     <!-- Menú móvil (desplegable) -->
     <div id="mobile-menu" class="fixed top-0 right-0 h-full w-2/3 bg-black/90 z-40 flex flex-col items-center pt-24 space-y-6 lg:hidden">
