--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
         <div class="flex items-center">
             <a href="#inicio" class="flex items-center">
-                <span class="text-3xl font-extrabold text-white">Inóvi<span class="text-inovixe-blue">x</span>e</span>
+                <span class="text-3xl font-extrabold text-white" style="font-family: 'Orbitron', sans-serif;">Inóvi<span style="color: #0ea5e9;">x</span>e</span>
             </a>
         </div>
         <div class="hidden lg:flex items-center space-x-8">
@@ -175,7 +175,7 @@
         </div>
     </nav>
 </header>
-
+    
     <!-- Menú móvil (desplegable) -->
     <div id="mobile-menu" class="fixed top-0 right-0 h-full w-2/3 bg-black/90 z-40 flex flex-col items-center pt-24 space-y-6 lg:hidden">
         <a href="#inicio" class="nav-link text-white text-lg hover:text-inovixe-blue" onclick="closeMenu()">Inicio</a>
