--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
 
     <!-- Fondo de partículas -->
     <div id="particles-js"></div>
-
+    
 <!-- Header y Navegación -->
 <header class="bg-black bg-opacity-80 backdrop-blur-sm fixed top-0 left-0 w-full z-50 transition-all duration-300">
     <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
         <div class="flex items-center">
             <a href="#inicio" class="flex items-center">
-                <span class="text-3xl font-extrabold text-white" style="font-family: 'Orbitron', sans-serif;">Inóvi<span style="color: #0ea5e9;">x</span>e</span>
+                <span class="text-3xl font-extrabold text-white">Inóvi<span class="text-inovixe-blue">x</span>e</span>
             </a>
         </div>
         <div class="hidden lg:flex items-center space-x-8">
