--- a/index.html
+++ b/index.html
@@ -245,19 +245,19 @@
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.2s;">
                         <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.114 5.636a9 9 0 010 12.728M16.463 8.288a5.25 5.25 0 010 7.424M6.75 8.25l4.72-4.72a.75.75 0 011.28.53v15.88a.75.75 0 01-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.01 9.01 0 012.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75z"></path></svg>
                         <h3 class="font-bold text-xl mb-2">Campañas en Meta y Publicidad Online</h3>
-                        <p class="text-gray-400 text-center">Campañas digitales precisas que generan tráfico cualificado y potencian la adquisición de clientes.</p>
+                        <p class="text-gray-400 text-center">Creamos campañas digitales precisas que generan tráfico cualificado y potencian la adquisición de clientes.</p>
                     </div>
                     <!-- Servicio 4 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.3s;">
                         <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2z"></path></svg>
                         <h3 class="font-bold text-xl mb-2">Funnels de venta automatizados</h3>
-                        <p class="text-gray-400 text-center">Rutas de conversión inteligentes que convierten visitantes en clientes leales de manera automatizada.</p>
+                        <p class="text-gray-400 text-center">Desarrollamos rutas de conversión inteligentes que convierten visitantes en clientes leales de manera automatizada.</p>
                     </div>
                     <!-- Servicio 5 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.5s;">
                         <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18v-5.25m0 0a6.01 6.01 0 001.5-.189m-1.5.189a6.01 6.01 0 01-1.5-.189m3.75 7.478a12.06 12.06 0 01-4.5 0m3.75 2.383a14.406 14.406 0 01-3 0M14.25 18v-.192c0-.983.658-1.823 1.508-2.316a7.5 7.5 0 10-7.517 0c.85.493 1.509 1.333 1.509 2.316V18"></path></svg>
                         <h3 class="font-bold text-xl mb-2">Consultoría Empresarial</h3>
-                        <p class="text-gray-400 text-center">Asesoramiento experto en integración de IA para evaluar oportunidades y maximizar el retorno.</p>
+                        <p class="text-gray-400 text-center">Ofrecemos asesoramiento experto en integración de IA para evaluar oportunidades y maximizar el retorno.</p>
                     </div>
                 </div>
             </div>
