--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.3s;">
                         <svg class="w-16 h-16 text-inovixe-blue mb-4" fill="none" stroke="currentColor" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5zm1 .5v1.308l4.372 4.858A.5.5 0 0 1 7 8.5v5.306l2-.666V8.5a.5.5 0 0 1 .128-.334L13.5 3.308V2z"></path></svg>
                         <h3 class="font-bold text-xl mb-2">Funnels de venta automatizados</h3>
-                        <p class="text-gray-400 text-center">Desarrollamos rutas de conversión inteligentes que convierten visitantes en clientes leales de manera automatizada.</p>
+                        <p class="text-gray-400 text-center">Desarrollamos rutas de conversión inteligentes que convierten visitantes en clientes de manera automatizada.</p>
                     </div>
                     <!-- Servicio 5 -->
                     <div class="card p-8 rounded-2xl flex flex-col items-center transition-transform hover:scale-105 fade-in-up" style="transition-delay: 0.5s;">
