--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="container mx-auto px-6 py-12 lg:py-24">
                 <div class="max-w-4xl mx-auto">
                     <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold text-white leading-tight fade-in-up">
-                        Transformamos tu empresa con <span class="text-inovixe-blue-500">Inteligencia Artificial</span> para mejores resultados
+                        Transformamos tu empresa con <span class="text-inovixe-blue">Inteligencia Artificial</span> para mejores resultados
                     </h1>
                     <p class="mt-6 text-lg sm:text-xl text-gray-400 max-w-2xl mx-auto fade-in-up" style="transition-delay: 0.2s;">
                         Somos una agencia de IA que ofrece soluciones avanzadas, con servicios de marketing digital disponibles por separado o integrados para maximizar resultados.
