--- a/index.html
+++ b/index.html
@@ -272,23 +272,30 @@
         </p>
         <div class="flex flex-col md:flex-row justify-center items-center gap-8 md:gap-16">
             <div class="text-center fade-in-up" style="transition-delay: 0.2s;">
-                <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                </svg>
                 <h4 class="font-bold text-xl">Problema: Techo de crecimiento</h4>
                 <p class="text-gray-400 mt-2">Dependencia excesiva de recursos humanos y limitaciones en procesos manuales que restringen la expansión.</p>
             </div>
             <div class="text-center fade-in-up" style="transition-delay: 0.4s;">
-                <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.25 18L9 11.25l4.306 4.307a11.95 11.95 0 015.814-5.519l2.74-1.22m0 0l-5.94-2.28m5.94 2.28l-2.28 5.941"></path></svg>
+                <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/>
+                </svg>
                 <h4 class="font-bold text-xl">Solución: Escala ilimitada con IA</h4>
                 <p class="text-gray-400 mt-2">Herramientas de IA y asistentes virtuales que automatizan procesos y potencian estrategias de marketing para un crecimiento sin barreras.</p>
             </div>
             <div class="text-center fade-in-up" style="transition-delay: 0.6s;">
-                <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                </svg>
                 <h4 class="font-bold text-xl">Resultado: Presencia constante</h4>
                 <p class="text-gray-400 mt-2">Estrategias impulsadas por IA y marketing que aseguran una presencia continua, abriendo posibilidades para aumentar ventas de manera orgánica y eficiente.</p>
             </div>
         </div>
     </div>
 </section>
+
         
         <!-- Sección de Testimonios -->
         <section id="testimonios" class="py-16 md:py-24 bg-black-transparent">
