--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
         </div>
         <div class="hidden lg:flex items-center space-x-8">
             <a href="#inicio" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Inicio</a>
+             <a href="#sobre-nosotros" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Sobre Nosotros</a>
             <a href="#servicios" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Servicios</a>
-            <a href="#sobre-nosotros" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Sobre Nosotros</a>
             <a href="#testimonios" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">Testimonios</a>
             <a href="#faq" class="nav-link text-gray-300 hover:text-inovixe-blue transition-colors">FAQ</a>
             <a href="#contacto" class="btn-cta bg-inovixe-blue text-white hover:bg-inovixe-blue/90 transition-colors">Consulta Gratuita</a>
@@ -179,8 +179,8 @@
     <!-- Menú móvil (desplegable) -->
     <div id="mobile-menu" class="fixed top-0 right-0 h-full w-2/3 bg-black/90 z-40 flex flex-col items-center pt-24 space-y-6 lg:hidden">
         <a href="#inicio" class="nav-link text-white text-lg hover:text-inovixe-blue" onclick="closeMenu()">Inicio</a>
-        <a href="#servicios" class="nav-link text-white text-lg hover:text-inovixe-blue" onclick="closeMenu()">Servicios</a>
         <a href="#sobre-nosotros" class="nav-link text-white text-lg hover:text-inovixe-blue" onclick="closeMenu()">Sobre Nosotros</a>
+        <a href="#servicios" class="nav-link text-white text-lg hover:text-inovixe-blue" onclick="closeMenu()">Servicios</a>
         <a href="#testimonios" class="nav-link text-white text-lg hover:text-inovixe-blue" onclick="closeMenu()">Testimonios</a>
         <a href="#faq" class="nav-link text-white text-lg hover:text-inovixe-blue" onclick="closeMenu()">FAQ</a>
         <a href="#contacto" class="btn-cta bg-inovixe-blue text-white hover:bg-inovixe-blue/90 mt-8" onclick="closeMenu()">Consulta Gratuita</a>
@@ -290,7 +290,7 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                 </svg>
                 <h4 class="font-bold text-xl">Resultado: Presencia constante</h4>
-                <p class="text-gray-400 mt-2">Estrategias impulsadas por IA y marketing que aseguran una presencia continua, abriendo posibilidades para aumentar ventas de manera orgánica y eficiente.</p>
+                <p class="text-gray-400 mt-2">Estrategias impulsadas por IA y marketing que aseguran una presencia continua, abriendo posibilidades para aumentar ventas de manera eficiente.</p>
             </div>
         </div>
     </div>
@@ -420,21 +420,21 @@
 </section>
 </main>
 
-    <!-- Footer -->
-    <footer class="bg-black/90 py-12 border-t border-gray-800">
-        <div class="container mx-auto px-6 text-center">
-            <div class="flex justify-center mb-6">
-                <!-- Ícono de Instagram -->
-                <a href="#" class="text-white hover:text-inovixe-blue transition-colors mx-3" aria-label="Visítanos en Instagram">
-                    <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12 2.163c3.204 0 3.584.012 4.851.07 1.173.058 1.933.242 2.515.474.57.232 1.05.545 1.515 1.01s.783.945 1.01 1.515c.232.582.416 1.342.474 2.515.058 1.267.07 1.647.07 4.851s-.012 3.584-.07 4.851c-.058 1.173-.242 1.933-.474 2.515-.232.57-.545 1.05-1.01 1.515s-.945.783-1.515 1.01c-.582.232-1.342.416-2.515.474-1.267.058-1.647.07-4.851.07s-3.584-.012-4.851-.07c-1.173-.058-1.933-.242-2.515-.474-.57-.232-1.05-.545-1.515-1.01s-.783-.945-1.01-1.515c-.232-.582-.416-1.342-.474-2.515-.058-1.267-.07-1.647-.07-4.851s.012-3.584.07-4.851c.058-1.173.242-1.933.474-2.515.232-.57.545-1.05 1.01-1.515s.945-.783 1.515-1.01c.582-.232 1.342-.416 2.515-.474 1.267-.058 1.647-.07 4.851-.07zm0-1.803c-3.266 0-3.693.014-4.981.073-1.233.058-2.128.249-2.875.545-.747.296-1.396.7-2.035 1.334-.64.639-1.039 1.288-1.334 2.035-.296.747-.487 1.642-.545 2.875-.059 1.288-.073 1.715-.073 4.981s.014 3.693.073 4.981c.058 1.233.249 2.128.545 2.875.296.747.7 1.396 1.334 2.035.639.64 1.288 1.039 2.035 1.334.747.296 1.642.487 2.875.545 1.288.059 1.715.073 4.981.073s3.693-.014 4.981-.073c1.233-.058 2.128-.249 2.875-.545.747-.296 1.396-.7 2.035-1.334.639-.64 1.288-1.039 1.334-2.035.296-.747.487-1.642-.545-2.875-.059-1.288-.073-1.715-.073-4.981s-.014-3.693-.073-4.981c-.058-1.233-.249-2.128-.545-2.875-.296-.747-.7-1.396-1.334-2.035-.639-.64-1.288-1.039-2.035-1.334-.747-.296-1.642-.487-2.875-.545-1.288-.059-1.715-.073-4.981-.073zm0 4.107a5.834 5.834 0 100 11.667 5.834 5.834 0 000-11.667zm0 9.53a3.696 3.696 0 110-7.393 3.696 3.696 0 010 7.393zm6.545-9.613a1.455 1.455 0 100 2.91 1.455 1.455 0 000-2.91z"/>
-                    </svg>
-                </a>
-            </div>
-            <p class="text-gray-400">&copy; 2025 Inóvixe. Todos los derechos reservados.</p>
+<!-- Footer -->
+<footer class="bg-black/90 py-12 border-t border-gray-800">
+    <div class="container mx-auto px-6 text-center">
+        <div class="flex justify-center mb-6">
+            <!-- Ícono de Instagram -->
+            <a href="#" class="text-white hover:text-inovixe-blue transition-colors mx-3" aria-label="Visítanos en Instagram">
+                <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 2.163c3.204 0 3.584.012 4.851.07 1.173.058 1.933.242 2.515.474.57.232 1.05.545 1.515 1.01s.783.945 1.01 1.515c.232.582.416 1.342.474 2.515.058 1.267.07 1.647.07 4.851s-.012 3.584-.07 4.851c-.058 1.173-.242 1.933-.474 2.515-.232.57-.545 1.05-1.01 1.515s-.945.783-1.515 1.01c-.582.232-1.342.416-2.515.474-1.267.058-1.647.07-4.851.07s-3.584-.012-4.851-.07c-1.173-.058-1.933-.242-2.515-.474-.57-.232-1.05-.545-1.515-1.01s-.783-.945-1.01-1.515c-.232-.582-.416-1.342-.474-2.515-.058-1.267-.07-1.647-.07-4.851s.012-3.584.07-4.851c.058-1.173.242-1.933.474-2.515.232-.57.545-1.05 1.01-1.515s.945-.783 1.515-1.01c.582-.232 1.342-.416 2.515-.474 1.267-.058 1.647-.07 4.851-.07zm0-1.803c-3.266 0-3.693.014-4.981.073-1.233.058-2.128.249-2.875.545-.747.296-1.396.7-2.035 1.334-.64.639-1.039 1.288-1.334 2.035-.296.747-.487 1.642-.545 2.875-.059 1.288-.073 1.715-.073 4.981s.014 3.693.073 4.981c.058 1.233.249 2.128.545 2.875.296.747.7 1.396 1.334 2.035.639.64 1.288 1.039 2.035 1.334.747.296 1.642.487 2.875.545 1.288.059 1.715.073 4.981.073s3.693-.014 4.981-.073c1.233-.058 2.128-.249 2.875-.545.747-.296 1.396-.7 2.035-1.334.639-.64 1.288-1.039 1.334-2.035.296-.747.487-1.642-.545-2.875-.059-1.288-.073-1.715-.073-4.981s-.014-3.693-.073-4.981c-.058-1.233-.249-2.128-.545-2.875-.296-.747-.7-1.396-1.334-2.035-.639-.64-1.288-1.039-2.035-1.334-.747-.296-1.642-.487-2.875-.545-1.288-.059-1.715-.073-4.981-.073zm0 4.107a5.834 5.834 0 100 11.667 5.834 5.834 0 000-11.667zm0 9.53a3.696 3.696 0 110-7.393 3.696 3.696 0 010 7.393zm6.545-9.613a1.455 1.455 0 100 2.91 1.455 1.455 0 000-2.91z"/>
+                </svg>
+            </a>
         </div>
-    </footer>
-    
+        <p class="text-gray-400">&copy; 2025 Inóvixe. Todos los derechos reservados.</p>
+    </div>
+</footer>
+
     <!-- Scripts JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <script>
