--- a/index.html
+++ b/index.html
@@ -424,10 +424,12 @@
 <footer class="bg-black/90 py-12 border-t border-gray-800">
     <div class="container mx-auto px-6 text-center">
         <div class="flex justify-center mb-6">
-            <!-- Ícono de Instagram -->
+            <!-- Ícono de Instagram oficial -->
             <a href="#" class="text-white hover:text-inovixe-blue transition-colors mx-3" aria-label="Visítanos en Instagram">
-                <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12 2.163c3.204 0 3.584.012 4.851.07 1.173.058 1.933.242 2.515.474.57.232 1.05.545 1.515 1.01s.783.945 1.01 1.515c.232.582.416 1.342.474 2.515.058 1.267.07 1.647.07 4.851s-.012 3.584-.07 4.851c-.058 1.173-.242 1.933-.474 2.515-.232.57-.545 1.05-1.01 1.515s-.945.783-1.515 1.01c-.582.232-1.342.416-2.515.474-1.267.058-1.647.07-4.851.07s-3.584-.012-4.851-.07c-1.173-.058-1.933-.242-2.515-.474-.57-.232-1.05-.545-1.515-1.01s-.783-.945-1.01-1.515c-.232-.582-.416-1.342-.474-2.515-.058-1.267-.07-1.647-.07-4.851s.012-3.584.07-4.851c.058-1.173.242-1.933.474-2.515.232-.57.545-1.05 1.01-1.515s.945-.783 1.515-1.01c.582-.232 1.342-.416 2.515-.474 1.267-.058 1.647-.07 4.851-.07zm0-1.803c-3.266 0-3.693.014-4.981.073-1.233.058-2.128.249-2.875.545-.747.296-1.396.7-2.035 1.334-.64.639-1.039 1.288-1.334 2.035-.296.747-.487 1.642-.545 2.875-.059 1.288-.073 1.715-.073 4.981s.014 3.693.073 4.981c.058 1.233.249 2.128.545 2.875.296.747.7 1.396 1.334 2.035.639.64 1.288 1.039 2.035 1.334.747.296 1.642.487 2.875.545 1.288.059 1.715.073 4.981.073s3.693-.014 4.981-.073c1.233-.058 2.128-.249 2.875-.545.747-.296 1.396-.7 2.035-1.334.639-.64 1.288-1.039 1.334-2.035.296-.747.487-1.642-.545-2.875-.059-1.288-.073-1.715-.073-4.981s-.014-3.693-.073-4.981c-.058-1.233-.249-2.128-.545-2.875-.296-.747-.7-1.396-1.334-2.035-.639-.64-1.288-1.039-2.035-1.334-.747-.296-1.642-.487-2.875-.545-1.288-.059-1.715-.073-4.981-.073zm0 4.107a5.834 5.834 0 100 11.667 5.834 5.834 0 000-11.667zm0 9.53a3.696 3.696 0 110-7.393 3.696 3.696 0 010 7.393zm6.545-9.613a1.455 1.455 0 100 2.91 1.455 1.455 0 000-2.91z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <rect x="2" y="2" width="20" height="20" rx="5" ry="5" />
+                    <path d="M16 11.37a4 4 0 11-7.998-.003 4 4 0 017.998.003z" />
+                    <path d="M17.5 6.5h.01" />
                 </svg>
             </a>
         </div>
