--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/>
                 </svg>
                 <h4 class="font-bold text-xl">Solución: Escala ilimitada con IA</h4>
-                <p class="text-gray-400 mt-2">Herramientas de IA y asistentes virtuales que automatizan procesos y potencian estrategias de marketing para un crecimiento sin barreras.</p>
+                <p class="text-gray-400 mt-2">Herramientas y agentes de IA que automatizan procesos y potencian estrategias de marketing para un crecimiento sin barreras.</p>
             </div>
             <div class="text-center fade-in-up" style="transition-delay: 0.6s;">
                 <svg class="w-24 h-24 text-inovixe-blue mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -396,7 +396,7 @@
             <p class="text-center text-gray-400 mb-8 max-w-lg fade-in-up">
                 Envíanos un mensaje y te contactaremos en menos de 60 minutos para discutir cómo Inóvixe puede transformar tu negocio.
             </p>
-            <form class="w-full max-w-md card p-8 rounded-2xl fade-in-up">
+            <form class="w-full max-w-md card p-8 rounded-2xl fade-in-up" action="https://formspree.io/f/mzzjgpew" method="POST">
                 <div class="mb-4">
                     <label for="name" class="block text-gray-300 font-semibold mb-2">Nombre</label>
                     <input type="text" id="name" name="name" class="w-full px-4 py-2 border border-gray-700 rounded-xl bg-gray-900 text-white focus:outline-none focus:ring-2 focus:ring-inovixe-blue" placeholder="Tu Nombre" required>
