--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
     <div class="container mx-auto px-6 text-center">
         <div class="flex justify-center mb-6">
             <!-- Ícono de Instagram oficial -->
-            <a href="#" class="text-white hover:text-inovixe-blue transition-colors mx-3" aria-label="Visítanos en Instagram">
+            <a href="https://www.instagram.com/jesusspalenzuela?igsh=YWRzM2NkMXQ2dzZt" class="text-white hover:text-inovixe-blue transition-colors mx-3" aria-label="Visítanos en Instagram">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                     <rect x="2" y="2" width="20" height="20" rx="5" ry="5" />
                     <path d="M16 11.37a4 4 0 11-7.998-.003 4 4 0 017.998.003z" />
